[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "litellm>=1.89.4",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
]
